--- a/f3Ftimer/src/main/res/values/array.xml
+++ b/f3Ftimer/src/main/res/values/array.xml
@@ -10,6 +10,7 @@
         <item>@string/BLUETOOTH_HC_05</item>
         <item>@string/TCP_IO</item>
         <item>@string/UDP</item>
+        <item>@string/MULTICAST</item>
     </string-array>
 
     <string-array name="options_stopbits" translatable="false">
